# cache-simulation

./: CMakeLists.txt  main.cpp
caches/: Cache.cpp  Cache.h
helper/: HitMissCounter.h
policies/: LRUReplace.cpp  LRUReplace.h  ReplacementPolicy.h  WriteBackPolicy.cpp  WriteBackPolicy.h  WritePolicy.h
